implemented transaction history, needs fixing
